Refactor codebase by linters